--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
     <div class=" main d-flex justify-content-center align-items-center min-vh-100">
         <div class="overlay"></div>
-        <div class="row login-container  rounded-5 p-2 shadow ">
+        <div class="row login-container  rounded-5 p-2 shadow mt-5">
             <h1 class="text-center ">Sign in</h1>
             <hr>
-            <div class="col-md-6 rounded-4 d-flex justify-contet-center align-items-center flex-column p-4">
+            <div class="leftbox col-md-6 rounded-4 d-flex justify-contet-center align-items-center flex-column p-4">
                 <div class="text-div"> 
                     <div>
                         <h1 class="text-light fs-2 mb-2">Welcome!</h1>
@@ -81,7 +81,7 @@
                 <div class="d-flex justify-content-evenly">
                     <div id="user-input" class="inline">
                         <input type="text" id="submit" placeholder="Captcha code"
-                            class="rounded w-100 form-control form-control-lg bg-light fs-6" />
+                            class="captchabox rounded w-100 form-control form-control-lg bg-light fs-6" />
                     </div>
 
                     <div id="image" class="inline" selectable="False">
